# warplab

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: CLOUD_NOTEBOOK_COMPATIBILITY.md  DOCKER_AND_REMOTE_GPU.md  KAGGLE_SAXPY_WALKTHROUGH.md  KAGGLE_SETUP.md  NOTEBOOK_FIRST_ACCESSIBILITY.md  NOTEBOOK_QUICKSTART.md  OPEN_SOURCE_GAPS_AND_NEXT_STEPS.md  PROJECT_SPEC.md  README.md  RELEASE_CHECKLIST.md  REPO_ASSESSMENT_AND_COMPLETION_GUIDE.md
notebooks/: warplab_v1.ipynb
projects/reduction/: README.md  bench.cu  kernel.cu  project.yaml  validate.cu
projects/saxpy/: README.md  bench.cu  kernel.cu  project.yaml  validate.cu
projects/stencil/: README.md  bench.cu  kernel.cu  project.yaml  validate.cu
tests/: test_core.py
warplab/: __init__.py  __main__.py  benchmark.py  cloud.py  compiler.py  config.py  env.py  execution.py  kaggle_api.py  kaggle_kernel.py  memory.py  models.py  profiler.py  report.py  runner.py  scoring.py  search.py  utils.py  validator.py  visualize.py
