[project]
name = "warplab"
version = "0.1.0"
description = "Self-optimizing workflows for CUDA kernels"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "WarpLab Contributors"}]
dependencies = [
    "pydantic>=2.0",
    "pandas",
    "numpy",
    "jinja2",
    "matplotlib",
    "pyyaml",
    "plotly",
    "ipywidgets",
    "notebook"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["warplab*"]
